<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>


    <!--
        This POM is used as base for any child project in a way that it is not necessary
        manage details of each child individually. However, every child must be considered
        as an independent project, and thus, their coordinates have not to be align with
        the defined here.
        The version number will be always RELEASE regardless the versions of the children.
    -->

    <groupId>iti.kukumo</groupId>
    <artifactId>kukumo-project</artifactId>
    <packaging>pom</packaging>
    <version>1</version>

    <name>Kukumo</name>
    <description>Project containing Kukumo as well as other useful tools</description>

    <modules>
        <!-- tools -->
        <module>kukumo-tools/jext</module>
        <module>kukumo-tools/jext-spring</module>
        <module>kukumo-tools/configurer</module>
        <module>kukumo-tools/maven-fetcher</module>
        <module>kukumo-tools/testing-embedded-db</module>
        <module>kukumo-tools/slf4j-ansi</module>
        <!-- kukumo -->
        <module>kukumo/kukumo-core</module>
        <module>kukumo/kukumo-launcher</module>
        <module>kukumo/kukumo-maven-plugin</module>
        <module>kukumo/kukumo-plugin-archetype</module>
        <!-- plugins -->
        <module>kukumo-plugins/kukumo-rest</module>
        <module>kukumo-plugins/kukumo-html-report</module>
        <module>kukumo-plugins/kukumo-core-l10n</module>
        <module>kukumo-plugins/kukumo-rest-l10n</module>
        <module>kukumo-plugins/kukumo-db</module>
        <module>kukumo-plugins/kukumo-db-l10n</module>
        <module>kukumo-plugins/kukumo-spring</module>
        <!-- examples -->
        <module>kukumo-examples</module>

    </modules>


    <!--
      =============================================================
      The following configuration will be inherited by every module
      =============================================================
    -->

    <organization>
        <name>ITI - Instituto Tecnológico de Informática</name>
        <url>https://www.iti.es</url>
    </organization>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://repository.jboss.org/licenses/mit.txt</url>
        </license>
    </licenses>


    <properties>
        <!-- encoding -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- build versions -->
        <java.version>1.8</java.version>
        <maven.compiler.version>3.8.0</maven.compiler.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <!-- paths -->
        <maven.repo.local>${env.HOME}/.m2/repository</maven.repo.local>
        <!-- dependency versions -->
        <lombok.version>1.18.6</lombok.version>
        <slf4j.version>1.7.25</slf4j.version>
        <log4j.version>2.11.2</log4j.version>
        <junit.version>4.12</junit.version>
        <jsonassert.version>1.5.0</jsonassert.version>
        <kukumo.version>0.9.0</kukumo.version>
        <!-- plugin versions -->
        <jacoco.version>0.8.2</jacoco.version>
        <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
        <surefire.report.version>2.6</surefire.report.version>
        <maven.site.version>3.7.1</maven.site.version>
        <maven.ant.version>1.8</maven.ant.version>
        <maven.info.reports.version>3.0.0</maven.info.reports.version>
        <maven.javadoc.version>2.8</maven.javadoc.version>
    </properties>


    <!-- basic build features -->
    <build>
        <plugins>
            <!-- specific version of maven compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
            </plugin>
            <!-- JaCoCo coverage -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
            </plugin>
            <!-- generate additional jar with sources -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven.source.plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- maven site -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>${maven.site.version}</version>
            </plugin>
        </plugins>
    </build>



    <!-- basic dependencies -->
    <dependencies>
        <!-- COMPILE SCOPE -->
        <!-- SLF4J API -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
            <scope>compile</scope>
        </dependency>
        <!-- TEST SCOPE -->
        <!-- Log4j 2 over SLF4J -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- JUnit testing -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- generic test assertions -->
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.10.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>



    <!-- extra dependencies -->
    <dependencyManagement>
        <dependencies>
            <!-- lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <!-- JSON test assertions -->
            <dependency>
                <groupId>org.skyscreamer</groupId>
                <artifactId>jsonassert</artifactId>
                <version>${jsonassert.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>



    <distributionManagement>
        <site>
            <id>local-site</id>
            <url>${project.baseUri}</url>
        </site>
    </distributionManagement>



    <!-- Reports to generate -->
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>${maven.info.reports.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven.javadoc.version}</version>
                <configuration>
                    <failOnError>false</failOnError>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${surefire.report.version}</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
            </plugin>
        </plugins>
    </reporting>



    <profiles>
        <!-- Copy site resources -->
        <profile>
            <id>build-site</id>
            <activation>
                <file>
                    <exists>src/site/site.xml</exists>
                </file>
            </activation>
            <build>
                <plugins>
                    <!-- Copy site resources -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>${maven.ant.version}</version>
                        <executions>
                            <execution>
                                <id>copy-markdown-docs</id>
                                <phase>pre-site</phase>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                                <configuration>
                                    <target>
                                        <!-- Uses README.md as the main page of the site -->
                                        <copy
                                                file="${basedir}/README.md"
                                                tofile="${basedir}/src/site/markdown/index.md"
                                                overwrite="true"
                                                failonerror="false"
                                        ></copy>
                                        <!-- Use any .md file from  /docs/* as a site resource -->
                                        <copy
                                                file="${basedir}/docs/*.md"
                                                todir="${basedir}/src/site/markdown"
                                                overwrite="true"
                                                failonerror="false"
                                        ></copy>
                                    </target>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>







</project>
